fix: LaTeXレポートの内容を修正し、分析結果を明確化
- 散布図の説明を修正し、データ点の減少傾向を強調
- ユーザータイプ別のデータ分布に関する記述を明確化
- 目的地数と移動距離の関係を詳細に分析し、視覚化の説明を追加
- ヒートマップの説明を更新し、利用パターンの割合を明示
- 分析結果の考察を追加し、今後の展望を示唆

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -289,9 +289,9 @@
   \label{fig:scatter_passengers}
 \end{figure}
 
-散布図から、カーシェアリングの利用は圧倒的に少人数での利用が多いことが分かる。乗車人数1人から4人までのデータが大部分を占め、5人以上での利用は極めて少ない。特に、1人での利用（青とオレンジの点が最も密集している部分）が最多であり、乗車人数が増えるにつれて利用回数は急激に減少している。
+散布図から、カーシェアリングの利用は圧倒的に少人数での利用が多いことが分かる。乗車人数1人から4人までのデータが大部分を占め、5人以上での利用は極めて少ない。乗車人数が増えるにつれてデータ点の数が急激に減少していることから、利用回数が減少していることが確認できる。
 
-ユーザータイプ別に見ると、教職員（青）の方が学生（オレンジ）よりも高い位置にデータ点が散らばっており、特に1人での利用時に長距離移動をする事例が多いことが視覚的に確認できる。また、極端に乗車人数が多いケース（20人や30人）は教職員の利用であり、これは大型の送迎バスなど特殊な車両を使用した可能性がある。
+ユーザータイプ別に見ると、教職員（青）の方が学生（オレンジ）よりも距離の大きい範囲にデータ点が分布しており、長距離移動をする事例が相対的に多いことが分かる。また、極端に乗車人数が多いケース（20人や30人）は教職員の利用であり、これは大型の送迎バスなど特殊な車両を使用した可能性がある。
 
 \subsubsection{乗車人数と移動距離の関係（ユーザータイプ別詳細）}
 
@@ -322,7 +322,7 @@
 
 分析2の結果から、以下の知見が得られた。
 
-まず、移動距離の典型的な値（中央値）は教職員と学生でほぼ同じであるが、教職員の方が極端に長距離の移動をする事例が多い。これは、教職員の業務の性質上、遠方への出張が発生するためと考えられる。一方、所要時間に関しては学生の方が長く、学生が車を長時間借りて複数の用事を済ませる利用形態が多いことが示唆された。
+まず、移動距離の中央値は教職員と学生でほぼ同じであるが、教職員の方が極端に長距離の移動をする事例が多い。これは、教職員の業務の性質上、遠方への出張が発生するためと考えられる。一方、所要時間に関しては学生の方が長く、学生が車を長時間借りて複数の用事を済ませる利用形態が多いことが示唆された。
 
 乗車人数と移動距離の関係については、両ユーザータイプとも人数が増えると移動距離が増加する傾向が見られたが、その傾向は学生の方がより明確である。学生は複数人での利用時に遠出をする傾向があるのに対し、教職員は単独での長距離移動が多い。この違いは、利用目的の違い（教職員は業務出張、学生は団体での外出）を反映していると考えられる。
 
@@ -331,7 +331,7 @@
 
 \subsection{分析の目的と方法}
 
-カーシェアリングでは、1回の乗車で複数の目的地を訪れることがある。目的地の数が移動距離にどのように影響するかを調べることは、利用者の行動パターンを理解する上で重要である。そこで、1回の乗車における目的地数と移動距離の関係を分析した。
+カーシェアリングでは、1回の乗車で複数の目的地を訪れることがある。目的地の数が移動距離にどのように影響するかを調べることは、利用者の行動パターンを理解する上で重要である。そこで、1回の乗車における目的地数と移動距離の関係を詳細に分析した。
 
 分析方法として、まず駐車履歴データから各乗車記録（\texttt{history\_id}）に対応する目的地の数を集計した。次に、乗車履歴データと結合し、目的地数を「1箇所」「2箇所」「3箇所」「4箇所」「5箇所以上」の5つのカテゴリに分類した。各カテゴリについて移動距離の分布を可視化し、目的地数が増えると移動距離がどのように変化するかを調査した。
 
@@ -343,68 +343,116 @@
 
 図\ref{fig:violin_spots}にユーザータイプ別の1乗車あたり目的地数の分布を示す。
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\linewidth]{../figures/03_violin_spots_by_user_type.png}
+  \includegraphics[width=0.75\linewidth]{../figures/03_violin_spots_by_user_type.png}
   \caption{ユーザータイプ別の1乗車あたり目的地数の分布}
   \label{fig:violin_spots}
 \end{figure}
 
-バイオリンプロットを見ると、教職員と学生のいずれも、1回の乗車で1箇所または2箇所の目的地を訪れることが最も多いことが分かる。分布の形状は両ユーザータイプで類似しており、目的地数に関しては大きな違いは見られない。ただし、学生の方がやや目的地数のばらつきが大きい傾向がある。
+バイオリンプロットとその中に重ねられた箱ひげ図から、教職員と学生で目的地数の分布に違いがあることが分かる。教職員の中央値は約3箇所であるのに対し、学生の中央値は約5箇所と、学生の方が1回の乗車で訪れる目的地数が多い傾向がある。
+
+箱の広がりを見ると、学生の方が四分位範囲が広く、目的地数のばらつきが大きいことが確認できる。また、両ユーザータイプとも多数の外れ値が存在し、教職員で最大約70箇所、学生で最大約43箇所という極端なケースも見られる。これらは、長時間にわたって車を借りて多数の場所を巡った特殊な利用例と考えられる。
+
+バイオリンの形状から、教職員は2〜4箇所程度の利用が最も多く、比較的集中した分布を示している。一方、学生はより広い範囲に分散しており、少数の目的地から多数の目的地まで多様な利用パターンがあることが窺える。この違いは、学生の方が柔軟な行動パターンを持ち、1回の乗車で複数の用事を済ませる傾向があることを示唆している。
 
 \subsubsection{目的地数と移動距離の関係}
 
 図\ref{fig:jitter_spots}に目的地数別の移動距離のジッター散布図を、図\ref{fig:boxplot_spots}に箱ひげ図を示す。
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
-  \includegraphics[width=0.85\linewidth]{../figures/03_jitter_distance_by_spots.png}
+  \includegraphics[width=0.9\linewidth]{../figures/03_jitter_distance_by_spots.png}
   \caption{目的地数別の移動距離分布（ジッター散布図）}
   \label{fig:jitter_spots}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
-  \includegraphics[width=0.85\linewidth]{../figures/03_boxplot_distance_by_spots.png}
+  \includegraphics[width=0.9\linewidth]{../figures/03_boxplot_distance_by_spots.png}
   \caption{目的地数別の移動距離分布（箱ひげ図）}
   \label{fig:boxplot_spots}
 \end{figure}
 
-両図から、目的地数が増えるにつれて移動距離も増加する明確な傾向が確認できる。1箇所のみを訪れる場合の移動距離は比較的短いが、目的地が2箇所、3箇所と増えるにつれて、移動距離の中央値が上昇している。5箇所以上の目的地を訪れる場合には、移動距離が大幅に増加する。
+ジッター散布図は、各目的地数カテゴリ内でのデータ分布を色分けして可視化したものである。この図から、目的地数が増えるにつれてデータ点全体が上方に移動しており、移動距離が増加する傾向が視覚的に明確である。
 
-この結果は直感的に理解しやすい。複数の目的地を訪れる場合、それぞれの目的地間の移動距離が累積されるため、総移動距離が長くなるのは当然である。また、ジッター散布図から、同じ目的地数でも移動距離にはかなりのばらつきがあることが分かる。これは、訪れる目的地の位置関係や移動ルートによって、総移動距離が大きく変わることを示している。
+箱ひげ図から、より定量的な傾向を読み取ることができる。1箇所のみを訪れる場合、中央値は約10程度と比較的短い。目的地が2箇所になると中央値は約10〜12、3箇所で約13、4箇所で約15と段階的に上昇している。5箇所以上になると中央値は約18まで増加し、目的地数が増えるほど移動距離も長くなることが明確に示されている。
 
-\subsubsection{乗車人数と目的地数の関係}
+各カテゴリの箱の大きさ（四分位範囲）を見ると、目的地数が増えるにつれてやや広がる傾向がある。これは、同じ目的地数でも、訪れる場所の位置関係や移動ルートによって移動距離に大きなばらつきが生じることを意味している。例えば、5箇所以上の目的地を訪れる場合、効率的なルートを選べば比較的短い距離で済むが、非効率的なルートでは大幅に距離が伸びる可能性がある。
 
-図\ref{fig:heatmap_passengers_spots}に乗車人数と目的地数の組み合わせパターンを示す。
+外れ値に関しては、全ての目的地数カテゴリで存在するが、特に5箇所以上のカテゴリで顕著である。最大で300を超える極端な長距離移動も記録されており、これらは遠方への出張や特殊な用途での利用と考えられる。
 
-\begin{figure}[htbp]
+この結果は直感的にも理解しやすい。複数の目的地を訪れる場合、それぞれの目的地間の移動距離が累積されるため、総移動距離が長くなるのは自然である。ただし、同じ目的地数でも移動距離に大きなばらつきがあることから、目的地の選択や移動ルートの計画が総移動距離に大きく影響することが分かる。
+
+\subsubsection{乗車人数と目的地数の組み合わせパターン}
+
+図\ref{fig:heatmap_passengers_spots}に乗車人数と目的地数の組み合わせパターンを、全体に対する割合として示す。
+
+\begin{figure}[H]
   \centering
-  \includegraphics[width=0.85\linewidth]{../figures/03_heatmap_passengers_spots.png}
-  \caption{乗車人数と目的地数の組み合わせパターン}
+  \includegraphics[width=0.9\linewidth]{../figures/03_heatmap_passengers_spots.png}
+  \caption{乗車人数と目的地数の組み合わせパターン（全体比）}
   \label{fig:heatmap_passengers_spots}
 \end{figure}
 
-ヒートマップから、最も多い利用形態は「1人で1箇所の目的地を訪れる」パターンであることが分かる。次いで、「1人で2箇所」「1人で3箇所」の順に多い。乗車人数が増えるほど利用頻度は減少し、特に4人以上での利用は少ない。
+ヒートマップの各セルは、全体の乗車回数に対する割合を示している。最も高い割合を示しているのは「1人で5箇所以上の目的地を訪れる」パターンで、全体の18\%を占めている。これは、単独でカーシェアリングを利用し、複数の用事を一度に済ませる利用形態が非常に多いことを示している。
 
-興味深い点として、乗車人数が多い場合でも、目的地数は1箇所または2箇所に集中している。これは、団体での利用時には特定の目的地へ直接移動するか、少数の目的地を効率的に巡ることが多いことを示唆している。複数人で5箇所以上の目的地を訪れるケースは極めて稀である。
+次いで割合が高いのは「2人で5箇所以上」の12\%である。1人での利用を見ると、「1箇所」「2箇所」「3箇所」「4箇所」がそれぞれ7〜11\%程度で比較的均等に分散している。これは、単独利用者の行動パターンが多様であることを示している。
 
-この分析から、カーシェアリングは主に単独での短距離移動や少数の目的地への移動に利用されており、複数人での長距離・多目的地移動は例外的であることが明らかになった。
+乗車人数が2人の場合、1〜4箇所の目的地を訪れるパターンはそれぞれ2〜3\%程度と低いが、5箇所以上になると12\%に跳ね上がる。これは、2人での利用時には多くの目的地を巡る傾向があることを示唆している。
+
+乗車人数が3人以上になると、全体的に割合が低下する。3人での利用は1〜4箇所でそれぞれ1〜2\%、5箇所以上で6\%である。4人での利用はさらに少なく、5箇所以上でも4\%に留まる。5人以上での利用はほぼ0\%であり、極めて稀であることが分かる。
+
+この結果から、カーシェアリングは主に単独または2人での利用が中心であり、特に単独で複数の目的地を巡る利用形態が最も一般的であることが明らかになった。団体での利用は少なく、また団体で利用する場合でも目的地数は限定される傾向がある。
+
+\subsubsection{考察}
+
+分析3の結果から、以下の重要な知見が得られた。
+
+まず、ユーザータイプによる違いとして、学生の方が教職員よりも1回の乗車で訪れる目的地数が多いことが明らかになった。学生は中央値で約5箇所、教職員は約3箇所であり、学生の方がカーシェアリングを効率的に活用して複数の用事を済ませる傾向がある。これは、分析1で見られた学生の利用時間の長さとも整合している。
+
+目的地数と移動距離の関係については、明確な正の相関が確認された。目的地数が1箇所から5箇所以上に増えるにつれて、中央値が約10から約18へと段階的に上昇している。ただし、同じ目的地数でも移動距離には大きなばらつきがあり、目的地の配置や移動ルートの選択が重要であることが示唆された。
+
+乗車人数と目的地数の組み合わせパターンからは、単独での多目的地利用が最も一般的な形態であることが分かった。全体の18\%が「1人で5箇所以上」のパターンであり、これはカーシェアリングが個人の多様な用事を一度に済ませる手段として活用されていることを示している。
 
 
 \section{まとめ}
 
-本レポートでは、カーシェアリング実証実験の利用実績データを用いて、3つの観点から分析を実施した。
+本レポートでは、奈良先端科学技術大学院大学で実施されたカーシェアリング実証実験の利用実績データを用いて、ユーザータイプ別の利用パターン、移動距離・所要時間・乗車人数の関係、目的地数と移動距離の関係という3つの観点から分析を実施した。以下、各分析で得られた主要な知見をまとめる。
 
-分析1では、ユーザータイプ別の利用時間帯パターンを調査し、教職員は平日の勤務時間帯に集中した利用パターンを示すのに対し、学生はより柔軟な時間帯での利用が見られることを明らかにした。
+\subsection{分析1：利用時間帯パターンの違い}
 
-分析2では、移動距離と所要時間の分布を調査し、教職員と学生の間に大きな差は見られないことを確認した。また、乗車人数が増えると移動距離が増加する傾向があることを発見した。
+ユーザータイプ別の利用時間帯分析から、教職員と学生の利用パターンには明確な違いがあることが明らかになった。教職員の総利用回数は1824回であり、平日の勤務時間帯（午前10〜12時、午後14〜17時）に強く集中している。特に火曜日から木曜日の利用が多く、土曜日の午前11時頃に最も高いピークが見られる一方、日曜日の利用はほぼ皆無である。
 
-分析3では、目的地数と移動距離の関係を分析し、目的地数が増えるほど移動距離も増加する明確な傾向を確認した。また、最も多い利用形態は単独での少数の目的地への移動であることが分かった。
+対照的に、学生の総利用回数は4017回と教職員の2倍以上であり、午前9時から午後23時までの幅広い時間帯で利用している。火曜日の午後14時頃に最高のピークが見られるが、教職員ほど特定の時間帯への集中は見られず、夕方から夜間にかけても一定の利用がある。また、週末にも利用が確認され、学生の生活時間帯が多様であることが示された。
 
-これらの分析結果から、カーシェアリングの利用パターンはユーザータイプによって時間帯に違いが見られるものの、移動距離や目的地数に関しては類似した傾向を示すことが明らかになった。また、乗車人数や目的地数は移動距離に直接的な影響を与えることが確認された。
+この違いは、教職員の定時勤務という規則的なライフスタイルと、学生の柔軟な研究・学習スケジュールという両者のライフスタイルの違いを反映していると考えられる。
 
-今回の分析では、利用時間帯、移動距離、乗車人数、目的地数といった基本的な指標に焦点を当てたが、今後はより詳細な目的地の種類や移動ルートの分析を行うことで、カーシェアリングの利用形態をさらに深く理解できると考えられる。
+\subsection{分析2：移動距離・所要時間・乗車人数の特徴}
+
+移動距離の中央値は教職員と学生でともに約10と同程度であるが、外れ値の分布には大きな違いが見られた。教職員は最大で300を超える長距離移動が記録されているのに対し、学生の最大値は約50に留まる。これは、教職員が業務上の遠方出張でカーシェアリングを利用していることを示唆している。
+
+所要時間に関しては、教職員の中央値が約100〜150分であるのに対し、学生は約300分と2倍程度長い。移動距離の中央値がほぼ同じであるにもかかわらず所要時間が大きく異なるという事実は、学生が目的地での滞在時間を含めた長時間利用をしていることを意味している。教職員は短時間で用事を済ませて戻る利用が中心であるのに対し、学生は車を借りている間に複数の用事をゆっくりと済ませる利用形態が主流であると推測される。
+
+乗車人数と移動距離の関係については、両ユーザータイプとも人数が増えると移動距離が増加する傾向が見られたが、そのパターンは異なる。教職員は単独での長距離移動が多く、2〜4人での利用時に中央値が約15程度まで上昇するが、5人以上では約10に戻る。一方、学生は人数増加に伴い段階的に中央値が上昇し（1人で約10、5人以上で約15）、より明確な正の相関を示している。
+
+\subsection{分析3：目的地数と利用形態}
+
+目的地数に関しては、学生の方が教職員よりも多い傾向が見られた。学生の中央値は約5箇所であるのに対し、教職員は約3箇所であり、学生の方がカーシェアリングを活用して複数の用事を一度に済ませる傾向がある。この結果は、分析2で確認された学生の長時間利用とも整合している。
+
+目的地数と移動距離の関係については、明確な正の相関が確認された。1箇所のみを訪れる場合の中央値は約10であるが、目的地数が増えるにつれて段階的に上昇し、5箇所以上では約18に達する。複数の目的地間の移動距離が累積されるため、総移動距離が増加するという直感的に理解しやすい結果である。
+
+乗車人数と目的地数の組み合わせパターンからは、カーシェアリングの典型的な利用形態が明らかになった。最も多いのは「1人で5箇所以上の目的地を訪れる」パターンで、全体の18\%を占めている。次いで「2人で5箇所以上」が12\%である。この結果は、単独での多目的地利用がカーシェアリングの主要な利用形態であることを示している。
+
+\subsection{総括と今後の展望}
+
+本分析を通じて、カーシェアリングの利用パターンがユーザータイプによって大きく異なることが明らかになった。教職員は勤務時間内の短時間・業務目的の利用が中心であるのに対し、学生は長時間かけて多数の目的地を巡る柔軟な利用が主流である。利用回数も学生の方が2倍以上多く、学生にとってカーシェアリングがより重要な移動手段となっていることが示された。
+
+移動距離に関しては、乗車人数と目的地数の両方が影響を与えることが定量的に確認された。
+
+これらの知見は、カーシェアリングサービスの運用改善に活用できる。例えば、教職員と学生の利用時間帯が異なることを考慮した車両配置、学生の長時間利用に対応した料金体系の設計、多目的地利用に適した効率的なルート提案機能の実装などが考えられる。
+
+今回の分析では、利用時間帯、移動距離、乗車人数、目的地数といった基本的な指標に焦点を当てたが、今後はより詳細な目的地の種類（レストラン、商業施設、公共施設など）や移動ルートの効率性、季節変動、天候の影響などを分析をしてみたいと思った。
 
 
 \end{document}
